--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,12 @@
 {
 	"name": "Codespaces Rust Starter",
+	"image": "mcr.microsoft.com/devcontainers/universal:2-linux",
 	"extensions": [
 		"rust-lang.rust-analyzer",
 	],
 	"dockerFile": "Dockerfile",
 	"settings": {
 		"editor.formatOnSave": true,
-		"terminal.integrated.shell.linux": "/usr/bin/zsh",
 		"files.exclude": {
 			"**/CODE_OF_CONDUCT.md": true,
 			"**/LICENSE": true
